unpackaged/main/default/objects/litify_fin__lit_Group_Template__c/litify_fin__lit_Group_Template__c.object-meta.xml
<CustomObject>
    <label>Group Template</label>
    <nameField>
        <label>Group Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>