unpackaged/main/default/objects/litify_fin__lit_Group_Template__c/fields/litify_fin__lit_Financials_Summary_Setup__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Financials_Summary_Setup__c</fullName>
    <description>The financial summary setup object this group template works under.</description>
    <label>lit_Financials Summary Setup</label>
    <referenceTo>litify_fin__lit_Financials_Summary_Setup__c</referenceTo>
    <relationshipLabel>Group Templates</relationshipLabel>
    <relationshipName>Group_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>