unpackaged/main/default/objects/litify_fin__lit_Group_Template__c/fields/litify_fin__lit_Is_Multi_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Is_Multi_Item_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if the Group is a multi-item group or not.</description>
    <label>Is Multi-Item Group</label>
    <type>Checkbox</type>
</CustomField>