unpackaged/main/default/objects/litify_fin__lit_Group_Template__c/fields/litify_fin__lit_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Type__c</fullName>
    <description>Specifies if the summary column for this group is a credit or a debit to the summary&#39;s total client payout.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>