unpackaged/main/default/objects/litify_fin__lit_Group_Template__c/fields/litify_fin__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Type__c</fullName>
    <description>Can specify the group as ledger or result group. No specification make the group a standard group that shows up on the financials summary.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>