unpackaged/main/default/objects/litify_fin__lit_Group_Template__c/listViews/litify_fin__All.listView-meta.xml
<ListView>
    <fullName>litify_fin__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>